package cn.tunyl.creational.abstractfactory;

public class AmericanCoffee extends Coffee{
    @Override
    public String getName() {
        return "AmericanCoffee";
    }
}
