package cn.tunyl.creational.factroymethod;

public interface CoffeeFactory {
    Coffee createCoffee();
}
